# adventofcode

./: README.md  pyproject.toml
.github/workflows/: tests.yml  update_badges.yml
day01/: main.py
day02/: main.py
day05/: main.py
day07/: main.py
day08/: main.py
day09/: main.py
day1/: part_1.py
day11/: main.py
day12/: main.py
day13/: main.py
day14/: main.py
day15/: main.py
day16/: main.py
day17/: main.py
day18/: main.py
day2/: main.py
day3/: main.py
day3/tests/: test_main.py
day4/: main.py
day5/: main.py
day6/: main.py
day7/: main.py
day8/: main.py
day9/: main.py
tests/: test_all_days.py
