[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Kenji Yamashita <y.kenji.b@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.21.4"
scikit-image = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
pytest = "^6.2.5"
mypy = "^0.910"
flake8 = "^4.0.1"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
